<resources>
    <string name="app_name">Football Is All</string>
    <string name="Title">Football Is All</string>
    <string name="action_settings">Settings</string>
    <string name="uefa_intro">UEFA ROUND OF 16 LEG 1 - Santiago Bernabéu</string>
    <string name="info">For complete match analysis and post match presentation, visit www.uefa.com - the one stop destination for all of UEFA info and official merchandise of all teams participating.</string>
    <string name="score">0</string>
    <string name="RM_goal">G O A L</string>
    <string name="RM">REAL MADRID</string>
    <string name="RM_fouls">FOULS</string>
    <string name="RM_corners">CORNERS</string>
    <string name="FCB">FC BARCELONA</string>
    <string name="reset">RESET</string>
    <string name="versus">v/s</string>
    <string name="share">SHARE</string>
    <string name="quit">QUIT</string>
    <string name="title">Football Is All</string>
    <string name="uefa">UEFA Champions League Scorecard</string>
    <string name="sharing">Matchday Scorecard via the Footbal Is All app...</string>
    <string name="sharevia">Share via</string>
    <string name="information">Press again to exit</string>
    <string name="image">image/*</string>
    <string name="tags">GREC</string>
    <string name="screenshot">/screenshot.png</string>
    <string name="gif">uefa.gif</string>
</resources>
