<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_ht"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_ht"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/uefabg"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackish"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_elev"
            app:cardUseCompatPadding="true"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/uefa2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/marg_right"
                    android:layout_marginTop="@dimen/marg_top"
                    android:gravity="center"
                    android:text="@string/versus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/intro_top"
                    android:gravity="center"
                    android:text="@string/uefa_intro"
                    android:textColor="@color/bluish" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/part"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/right_marg"
                            android:layout_marginTop="@dimen/top_marg"
                            android:gravity="center"
                            android:text="@string/RM"
                            android:textColor="@color/greenish"
                            android:textSize="@dimen/size_text" />

                        <TextView
                            android:id="@+id/rm_score"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/score_top"
                            android:gravity="center"
                            android:padding="@dimen/top_marg"
                            android:text="@string/score"
                            android:textColor="@color/light_blue"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/marg_button"
                            android:alpha="0.4"
                            android:background="@drawable/rnd2"
                            android:onClick="addScoreForRM"
                            android:text="@string/RM_goal"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/rm_foul"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/top_marg"
                            android:text="@string/score"
                            android:textColor="@color/light_blue"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/marg_button"
                            android:alpha="0.5"
                            android:background="@drawable/rnd1"
                            android:onClick="addFoulForRM"
                            android:text="@string/RM_fouls"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/rm_corner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/top_marg"
                            android:text="@string/score"
                            android:textColor="@color/light_blue"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/marg_button"
                            android:alpha="0.5"
                            android:background="@drawable/rnd"
                            android:onClick="addCornerForRM"
                            android:text="@string/RM_corners"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/line_width"
                        android:layout_height="@dimen/line_height"
                        android:layout_marginTop="@dimen/line_margTop"
                        android:background="@android:color/darker_gray" />


                    <LinearLayout
                        android:layout_width="@dimen/part"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/right_marg"
                            android:layout_marginTop="@dimen/top_marg"
                            android:gravity="center"
                            android:text="@string/FCB"
                            android:textColor="@color/greenish"
                            android:textSize="@dimen/size_text" />

                        <TextView
                            android:id="@+id/fcb_score"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/score_top"
                            android:gravity="center"
                            android:padding="@dimen/top_marg"
                            android:text="@string/score"
                            android:textColor="@color/fcb_bluish"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/marg_button"
                            android:alpha="0.4"
                            android:background="@drawable/rnd2"
                            android:onClick="addScoreForFCB"
                            android:text="@string/RM_goal"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fcb_foul"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/top_marg"
                            android:text="@string/score"
                            android:textColor="@color/fcb_bluish"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/marg_button"
                            android:alpha="0.5"
                            android:background="@drawable/rnd1"
                            android:onClick="addFoulForFCB"
                            android:text="@string/RM_fouls"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fcb_corner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/top_marg"
                            android:text="@string/score"
                            android:textColor="@color/fcb_bluish"
                            android:textSize="@dimen/score_size"
                            android:textStyle="bold" />


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/marg_button"
                            android:alpha="0.5"
                            android:background="@drawable/rnd"
                            android:onClick="addCornerForFCB"
                            android:text="@string/RM_corners"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/txtViewWeb"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.6"
                    android:background="@color/blackish"
                    android:onClick="resetScore"
                    android:text="@string/reset"
                    android:textColor="@color/yeellowish"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/txtViewWeb"
                    android:layout_marginRight="@dimen/right_marg"
                    android:layout_toLeftOf="@id/reset"
                    android:alpha="0.6"
                    android:background="@color/blackish"
                    android:onClick="shareScore"
                    android:text="@string/share"
                    android:textColor="@color/yeellowish"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/txtViewWeb"
                    android:layout_marginLeft="@dimen/right_marg"
                    android:layout_toRightOf="@id/reset"
                    android:alpha="0.6"
                    android:background="@color/blackish"
                    android:onClick="onBackPressed"
                    android:text="@string/quit"
                    android:textColor="@color/yeellowish"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewWeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/text_marign"
                    android:autoLink="web"
                    android:text="@string/info"
                    android:textColor="@color/whitish"
                    android:textColorLink="@color/teal" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>